Added sales made by services in satement of account report.

--- a/ZenBiz/AppModules/RDLC/statement-of-account-by-transaction.rdlc
+++ b/ZenBiz/AppModules/RDLC/statement-of-account-by-transaction.rdlc
@@ -118,7 +118,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>Purchased Items:</Value>
+                                  <Value>Purchased Items/Services:</Value>
                                   <Style>
                                     <FontSize>9pt</FontSize>
                                     <Color>DimGray</Color>
